Change form layout after adding an existing positions field.

--- a/app/assets/stylesheets/suggestions.sass
+++ b/app/assets/stylesheets/suggestions.sass
@@ -3,3 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .suggestion-form-label
   margin-bottom: 12px
+
+.suggest-new-position
+  margin-top: 15px !important
